# markcloud_task

./: READ.md
fastapi-markcloud/: pyproject.toml
fastapi-markcloud/src/fastapi_markcloud/: database.py  main.py  models.py  views.py
fastapi-markcloud/src/fastapi_markcloud/templates/: search.html
markcloud/src/: db.sqlite3
markcloud/src/config/: settings.py
markcloud/src/search/: models.py
